# felwoc

./: .gitignore  BUILD  BasicExcel.hpp  CMakeLists.txt  Dockerfile  ExcelFormat.vcxproj  ExcelFormat.vcxproj.filters  README.md  WORKSPACE.bazel  build.sh  build_and_test.sh  build_dev.sh  design2.xls  dev.sh  docker-compose.yaml  felwoc.ini  fxlsc.ini  haxe.Dockerfile  main.cpp  new_sample.ods  new_sample.xls  parsing.cpp  parsing.h  readme.txt  table.cpp  table.h  test.sh  xls2xj.ini  zlib.BUILD
.devcontainer/: devcontainer.json  docker-compose.yml
as3/: Planet.as
ast/: array.cpp  array.h  ast.h  bool.cpp  bool.h  field.cpp  field.h  field_data.cpp  field_data.h  float.cpp  float.h  inherited.cpp  inherited_field.cpp  inherited_field.h  int.cpp  int.h  link.cpp  link.h  service.cpp  service.h  service_field.cpp  service_field.h  table.cpp  table.h  text.cpp  text.h  utils.cpp  utils.h
data_source/: DataSource.h  data_source.cpp  data_source.h
data_source/ods_as_xml/: ods_as_xml.cpp  ods_as_xml.h
data_source/ods_as_xml/sample/: my.ods
excel_format/: BasicExcel.cpp  Examples.cpp
field/: field.h  field_data.cpp  field_data.h  float.cpp  float.h  inherited.cpp  inherited.h  inherited_field.h  int.cpp  int.h  link.cpp  link.h  service.cpp  service.h  text.cpp  text.h
output/: README.md  messenger.cpp  messenger.h
output/outputs/: console_output.cpp  console_output.h  file_output.cpp  file_output.h  output.h  string_output.cpp  string_output.h
output/test/: main.cpp
smhasher_/: MurmurHash3.h  README.txt
targets/: README.txt  target_platform.h  utils.cpp  utils.hpp
targets/as3/: as3_target.cpp  as3_target.h
targets/haxe/: Bound.hx  Count.hx  FosUtils.hx  Info.hx  Infos.hx  Link.hx  haxe_target.cpp  haxe_target.h
targets/ts/: ts_target.cpp  ts_target.h
test/haxe/: project.xml
test/haxe/Source/: Main.hx  TestSample.hx
