load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file" )
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository" )
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

maybe(
    http_archive,
    name = "net_zlib_zlib",
    build_file = "@//:zlib.BUILD",
    sha256 = "c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1",
    strip_prefix = "zlib-1.2.11",
    urls = [
        "https://zlib.net/zlib-1.2.11.tar.gz",
        "https://mirror.bazel.build/zlib.net/zlib-1.2.11.tar.gz",
    ],
)

git_repository(
    name = "catch2",
    remote = "https://github.com/catchorg/Catch2",
    commit = "c359076e8ad5d8be45a56dee013f414a5485050b",
)

git_repository(
    name = "platforms",
    remote = "https://github.com/bazelbuild/platforms",
    commit = "3fbc687756043fb58a407c2ea8c944bc2fe1d922",
)

# from https://github.com/cherrry/bazel_pkg_config
http_archive(
    name = "bazel_pkg_config",
    strip_prefix = "bazel_pkg_config-master",
    urls = ["https://github.com/cherrry/bazel_pkg_config/archive/master.zip"],
    sha256 = "6e2c08b957137bc793257fc4bfa577a462b0bf74914a2b349f4392157a0ed026",
)
load("@bazel_pkg_config//:pkg_config.bzl", "pkg_config")

git_repository(
    name = "fmt",
    commit = "86477f7ecc1606e15abae1ff784e6b0c55d99619",
    shallow_since = "1645579267 -0800",
    remote = "https://github.com/fmtlib/fmt",
    patch_cmds = [
        "mv support/bazel/.bazelrc .bazelrc",
        "mv support/bazel/.bazelversion .bazelversion",
        "mv support/bazel/BUILD.bazel BUILD.bazel",
        "mv support/bazel/WORKSPACE.bazel WORKSPACE.bazel",
    ],
    # Windows-related patch commands are only needed in the case MSYS2 is not installed.
    # More details about the installation process of MSYS2 on Windows systems can be found here:
    # https://docs.bazel.build/versions/main/install-windows.html#installing-compilers-and-language-runtimes
    # Even if MSYS2 is installed the Windows related patch commands can still be used.
    patch_cmds_win = [
        "Move-Item -Path support/bazel/.bazelrc -Destination .bazelrc",
        "Move-Item -Path support/bazel/.bazelversion -Destination .bazelversion",
        "Move-Item -Path support/bazel/BUILD.bazel -Destination BUILD.bazel",
        "Move-Item -Path support/bazel/WORKSPACE.bazel -Destination WORKSPACE.bazel",
    ],
)

_RULES_BOOST_COMMIT = "96e9b631f104b43a53c21c87b01ac538ad6f3b48"
http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "5ea00abc70cdf396a23fb53201db19ebce2837d28887a08544429d27783309ed",
    strip_prefix = "rules_boost-%s" % _RULES_BOOST_COMMIT,
    urls = [
        "https://github.com/nelhage/rules_boost/archive/%s.tar.gz" % _RULES_BOOST_COMMIT,
    ],
)
load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")
boost_deps()


